# smay_momentum

./: .pre-commit-config.yaml  README.md  config.py  data.py  metrics.py  momentum.py  plotting.py  requirements_dev.txt  setup.cfg  test_unit.py  testfile.xlsx  tox.ini
.github/workflows/: python-package-conda.yml  test.yml  tests.yml
src/momentum/: config.py  data.py  momentum.py  plotting.py
src/tests/: test_unit.py
