[metadata]
name = smay_momentum
description = Naive Momentum
author = Spencer May
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3.9

[options]
packages =
    momentum
install_requires =
    pandas>=1.1.0
    arctic>=1.79.4
    numpy>=1.21.2
    plotly>=5.3.1

python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[flake8]
max-line-length = 160